Fix Chart gaps for mobile

--- a/src/app/bar-chart/bar-chart.component.scss
+++ b/src/app/bar-chart/bar-chart.component.scss
@@ -3,6 +3,9 @@
     flex-direction: row;
     gap: 10px;
     align-items: flex-end;
+    @media (max-width:959px) {
+        gap: 2px;
+    }
     
     .month{
         flex: 1;
